--- a/blog.html
+++ b/blog.html
@@ -17,25 +17,6 @@
 </ul>
 
 <h3>HTML</h3>
-<p>HTML atau HyperText Markup Language blablabla</p>
-<button>Selengkapnya....</button>
-
-<h3>CSS</h3>
-<p>CSS atau Cascading Style Sheet</p>
-<button>Selengkapnya....</button>
-
-<h3>Category</h3>
-<ul>
-    <li><a href="#">HTML</a></li>
-    <li><a href="#">NO CSS</a></li>
-    <li><a href="#">BOOTSTRAP</a></li>
-    <li><a href="#">PHP</a></li>
-    <li><a href="#">CSS</a></li>
-    <li><a href="#">Python</a></li>
-    <li><a href="#">Javascript</a></li>
-</ul>
-
-<p>Copyright © 2026 DELAYOTA. All rights reserved.</p>
-
-</body>
-</html>
+<p>SMAN 8 Yogyakarta adalah salah satu dari 10 sekolah menengah atas negeri terbaik se-kota Yogyakarta.
+    SMAN 8 Yogyakarta masih menjadi salah satu sekolah terfavorit dan menjadi salah satu tujuan mayoritas siswa smp untuk melanjutkan stuidnya.
+</p>
