--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,8 @@
     <li><a href="contact.html">Contact</a></li>
 </ul>
 
-<h3>HTML</h3>
+<h3>Mengenal SMAN 8 Yogyakaarta</h3>
 <p>SMAN 8 Yogyakarta adalah salah satu dari 10 sekolah menengah atas negeri terbaik se-kota Yogyakarta.
     SMAN 8 Yogyakarta masih menjadi salah satu sekolah terfavorit dan menjadi salah satu tujuan mayoritas siswa smp untuk melanjutkan stuidnya.
 </p>
+
