--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <body>
 
-<h2>Selamat datang di website SMAN 8 Yogyakarta</h2>
+ <div class="header">
+   <h2>Selamat datang di website SMAN 8 Yogyakarta</h2>
+ </div>
 
 <ul>
     <li><a href="index.html">Home</a></li>
@@ -40,3 +42,4 @@
 
 </body>
 </html>
+
