--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
  <div class="header">
+  <div class="jarak">
    <h2>Selamat datang di website SMAN 8 Yogyakarta</h2>
+  </div>
  </div>
 
 <ul>
@@ -42,4 +44,5 @@
 
 </body>
 </html>
+
 
