--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <div class="header">
   <div class="jarak">
-   <h2>Selamat datang di website SMAN 8 Yogyakarta</h2>
+   <h2>Selamat Datang di Website SMAN 8 Yogyakarta</h2>
   </div>
  </div>
 
@@ -44,5 +44,6 @@
 
 </body>
 </html>
+
 
 
