--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <button>Selengkapnya....</button>
 
 <h3>Category</h3>
+
+<div class="menu">
 <ul>
     <li><a href="#">HTML</a></li>
     <li><a href="#">NO CSS</a></li>
@@ -39,11 +41,12 @@
     <li><a href="#">Python</a></li>
     <li><a href="#">Javascript</a></li>
 </ul>
-
+</div>
 <p>Copyright © 2026 DELAYOTA. All rights reserved.</p>
 
 </body>
 </html>
+
 
 
 
