--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <div class="header">
   <div class="jarak">
-   <h2>Selamat Datang di Website SMAN 8 Yogyakarta</h2>
+   <h2>Selamat Datang di Website SMAN 8 Yogyakarta (masih belajar) </h2>
   </div>
  </div>
 
@@ -46,6 +46,7 @@
 
 </body>
 </html>
+
 
 
 
